--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <serenity.version>2.0.23</serenity.version>
-        <serenity.maven.version>2.0.23</serenity.maven.version>
-        <serenity.cucumber.version>1.9.20</serenity.cucumber.version>
+        <serenity.version>2.0.33</serenity.version>
+        <serenity.maven.version>2.0.33</serenity.maven.version>
+        <serenity.cucumber.version>1.9.23</serenity.cucumber.version>
         <encoding>UTF-8</encoding>
         <tags></tags>
         <parallel.tests>4</parallel.tests>
@@ -103,7 +103,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.1</version>
                 <configuration>
-                    <skip>true</skip>
+                    <skip>false</skip>
                 </configuration>
             </plugin>
             <plugin>
